# nebulis-cli

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
.github/workflows/: release.yml
src/: cli.rs  main.rs
src/commands/: db.rs  generate.rs  mod.rs  new.rs
src/generators/: backend.rs  docker.rs  entity.rs  frontend.rs  migration.rs  mod.rs  model.rs  resolver.rs
src/templates/: backend.rs  docker.rs  frontend.rs  mod.rs
src/tests/: mod.rs  utils.rs
src/tests/integration/: mod.rs
src/tests/unit/: mod.rs
src/utils/: fs.rs  mod.rs  print.rs
