[package]
name = "nebulis-cli"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A CLI for creating Nebulis projects"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0.3"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
test-case = "3.1"
