[package]
name = "nebulis"
version = "0.1.0"
edition = "2021"
authors = ["Massinissa Amalou <amalou.massinissa&gmail.com>"]
description = "A Full Stack Rust/Remix/SurrealDB/GraphQL Project Generator"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/yourusername/nebulis"
repository = "https://github.com/yourusername/nebulis"
keywords = ["cli", "rust", "remix", "graphql", "surrealdb"]
categories = ["command-line-utilities", "development-tools"]

[profile.release]
opt-level = 3
strip = true      # Strip symbols from binary
lto = true        # Enable link-time optimization
codegen-units = 1 # Maximum size reduction optimizations

[[bin]]
name = "nebulis"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0.3"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
test-case = "3.1"
