[package]
name = "nebulis"
version = "0.1.1"
edition = "2021"
authors = ["Massinissa Amalou <amalou.massinissa&gmail.com>"]
description = "A Full Stack Rust/Remix/SurrealDB/GraphQL Project Generator"
license = "MIT"
readme = "README.md"
homepage = "https://github.com/meastblue/nebulis-cli"
repository = "https://github.com/meastblue/nebulis-cli"
documentation = "https://github.com/meastblue/nebulis-cli#readme"
keywords = ["cli", "rust", "remix", "graphql", "surrealdb"]
categories = ["command-line-utilities", "development-tools"]
exclude = ["/.github/*", "/tests/*", "/.gitignore"]

[package.metadata]
msrv = "1.70.0" # Version minimale de Rust supportée

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = 'abort'

[[bin]]
name = "nebulis"
path = "src/main.rs"

[badges]
maintenance = { status = "actively-developed" }


[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
thiserror = "2.0.3"

[dev-dependencies]
assert_fs = "1.0"
assert_cmd = "2.0"
predicates = "3.0"
tempfile = "3.8"
test-case = "3.1"
